<resources>
    <string name="app_name">BreakdownAssist</string>
    <string name="button_addBreakdown">Add Breakdown</string>
    <string name="hint_breakdownTitle">Garage Name</string>
    <string name="hint_breakdownDescription">Service Offered </string>
    <string name="hint_breakdownPhone">Mobile Number </string>
    <string name="menu_addBreakdown">Add</string>
    <string name="menu_cancelBreakdown">Cancel</string>
    <string name="enter_breakdown_title"> Please enter a Garage Name </string>
    <string name="save_breakdown"> Save Garage Edit </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_breakdown_image">Select Logo</string>
    <string name="change_breakdown_image">Change Logo</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteBreakdown">Delete</string>
    <string name="title_activity_breakdown_maps">Map of All Breakdowns </string>
    <string name="button_carOwner"> Report a Breakdown </string>
    <string name="button_garageInfo"> BreakdownAssist Garages </string>
    <string name="hint_calloutTitle">Enter Name</string>
    <string name="hint_calloutCarReg">Car Reg Number </string>
    <string name="hint_calloutPhone">Mobile Phone Number </string>
    <string name="button_addCallout">Record Breakdown</string>
    <string name="messageLoading">Please Wait while the BreakdownAssist Lists are Loading...</string>


    <string name="action_breakdown">Breakdown</string>
    <string name="action_list">List</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">Breakdown Assist</string>
    <string name="nav_header_subtitle">ddriver@kilrane.ie</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="breakdownsNotFound">No breakdowns Yet…\nGo Add a breakdown!</string>
    <string name="breakdownError">Error : Couldn\'t Add a breakdown…</string>
    <string name="breakdownDetails">Breakdown Details</string>

    <string name="amt">Amount :</string>
    <string name="phone">Phone :</string>
    <string name="message">Message :</string>
    <string name="description">Description :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="tyre">Tyre Shop</string>
    <string name="petrol">Petrol Station</string>
    <string name="defaultPhone">08*-*******</string>
    <string name="hours">24 Hour</string>
    <string name="not24">Open 9to5</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="service_type">Service Type</string>

    <string name="select_profile_image">Select Profile Image</string>
    <string name="action_location">Location</string>
    <string name="google_api_key">google_api_key</string>

    <string name="action_about">About BreakdownAssist</string>
    <string name="aboutus_title">Breakdown Assist App</string>
    <string name="aboutus_message">Welcome, to Breakdown Assist\n\nFind a garage nearby.\n\n Email help@breakdown.com</string>
</resources>